--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1,11 +1,11 @@
 # XBMC Media Center language file
-# Addon Name: Bello
-# Addon id: skin.bello
-# Addon Provider: Nessus
+# Addon Name: SimplexONE
+# Addon id: skin.simplexONE
+# Addon Provider: Tech-ZER0
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Skins\n"
-"Report-Msgid-Bugs-To: alanwww1@xbmc.org\n"
+"Report-Msgid-Bugs-To: simplex@tech-zero.com\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
@@ -71,7 +71,7 @@ msgid "OFF"
 msgstr ""
 
 msgctxt "#31013"
-msgid "Enable Home Menu Animation"
+msgid "Enable Home Animation"
 msgstr ""
 
 msgctxt "#31014"
@@ -1068,7 +1068,7 @@ msgid "Control core hardware and software functions, including audio and video h
 msgstr ""
 
 msgctxt "#31409"
-msgid "Choose from a variety of settings and customization options to make \"Bello\" fit your needs and taste."
+msgid "Choose from a variety of settings and customization options to make \"SimplexONE\" fit your needs and taste."
 msgstr ""
 
 msgctxt "#31410"
